--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
-<h1>Ledger</h1>
-<p>
-  This is the home page for Ledger.
-</p>
+<div class="center hero-unit">
+  <h1>Ledger</h1>
+
+  <h2>
+    This is the home page for Ledger.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
