--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'About Us') %>
+<% provide(:title, 'About') %>
 <h1>About Ledger</h1>
 <p>
   This application is for managing your personal finances.
