--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <h4 class="name"><%= account.name %></span>
+  <h4 class="name"><%= link_to account.name, account_path(account) %></span>
 </li>
