--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -5,6 +5,7 @@
       <h1>
         <%= @account.name %>
       </h1>
+      <%= link_to "Edit", edit_account_path(@account) %>
     </section>
   </aside>
 </div>
