--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -8,4 +8,13 @@
       <%= link_to "Edit", edit_account_path(@account) %>
     </section>
   </aside>
+  <div class="span8">
+    <% if @account.transactions.any? %>
+      <h3>Transactions (<%= @account.transactions.count %>)</h3>
+      <ol class="transactions">
+        <%= render @transactions %>
+      </ol>
+      <%= will_paginate @transactions %>
+    <% end %>
+  </div>
 </div>
