Cleaned up formatting of the transactions list

--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -1,6 +1,5 @@
 <li class="transaction">
   <h4 class="description"><%= transaction.description %></h4>
-  <span class="value">$<%= number_with_precision(transaction.value, :precision => 2) %></span>
-  @
-  <time datetime="<%= transaction.moment %>"><%= transaction.moment %></time>
+  <%= time_tag transaction.moment %>
+  <div class="value"><%= number_to_currency transaction.value %></div>
 </li>
