--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -207,3 +207,19 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+/* transactions */
+
+.transactions {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 0 0 5px 0;
+    border-top: 1px solid $grayLighter;
+    .value {
+      float: right;
+      font-size: 140%
+    }
+  }
+}
