--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   </aside>
   <div class="span8">
     <% if @user.accounts.any? %>
-      <h3>Accounts (<%= @user.accounts.count %>)</h3>
+      <h3>Accounts <small>(<%= @user.accounts.count %>)</small></h3>
       <ol class="accounts">
         <%= render @accounts %>
       </ol>
