--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "bootstrap-responsive";
 
 
 /* mixins, variables, etc. */
@@ -17,7 +18,6 @@ html {
 }
 
 body {
-  padding-top: 60px;
   font-weight: 200;
 }
 
@@ -33,6 +33,15 @@ textarea {
   text-align: center;
   h1 {
     margin-bottom: 10px;
+  }
+}
+
+
+/* responsive */
+
+@media (min-width: 979px) {
+  body {
+    padding-top: 60px;
   }
 }
 
