--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -92,6 +92,7 @@ label, input, button, select, textarea,
   text-transform: uppercase;
   letter-spacing: .1em;
   padding-top: 9px;
+  padding-left: 10px;
   line-height: 1;
   &:hover {
     text-decoration: none;
