--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon-precomposed" href="/assets/apple-touch-icon-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="<%= path_to_image("apple-touch-icon-precomposed.png") %>">
     <%= stylesheet_link_tag    "application", media: "all",
                                               "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
